# xtsslib

./: .gitignore  .gitmodules  .hgignore  .travis.yml  2Dgrid.hpp  CMakeLists.txt  InputParsing.hpp  ParserLL.hpp  ProjectHome.md  README.md  Tree.hpp  aarray_view.hpp  afilesystem.hpp  afilesystem_fwd.hpp  appveyor.yml  aprocess.hpp  astar.hpp  astring_view.hpp  astring_view_fwd.hpp  compatibility.hpp  environ.hpp  fast_convert.hpp  file_operation.hpp  linux_environ.hpp  linux_process.hpp  main.cpp  matrix.hpp  operation_type.hpp  return_status.hpp  static_hashmap.hpp  static_vector.hpp  statics.hpp  test.hpp  test_string_view.cpp  test_uri.cpp  test_uri.hpp  thread_define.hpp  trim.hpp  uri.hpp  uri_builder.hpp  (+7 more)
interprocess/: linux_named_recursive_mutex.hpp  named_recursive_mutex.hpp  null_named_recursive_mutex.hpp  windows_named_recursive_mutex.hpp
test/: main.cpp  test_astar.cpp  test_matrix.cpp  test_statics.cpp  test_string_view.cpp  test_vector_deck.cpp
